fixing portfolio layout issue

--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ footer {
     position: absolute;
     bottom: 0;
   }
+
+  .hidden{
+    visibility: hidden;
+}
 .copyright{
     text-align: center;
     color:rgb(141, 141, 141);
